--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,116 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label text-wrap>
+              <ion-text>
+                <h1 class="city-name" text-center>
+                  {{ weatherResponse?.city?.name }}
+                </h1>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label text-wrap>
+              <ion-text>
+                <h1 class="time" text-center>
+                  {{ currentWeather?.dt_txt.slice(11, 16) }} -
+                  {{ nextWeather?.dt_txt.slice(11, 16) }}
+                </h1>
+              </ion-text>
+            </ion-label>
+            <ion-button slot="start" (click)="goToPrevTime()">
+              <ion-icon
+                class="controls"
+                slot="icon-only"
+                name="arrow-dropleft"
+              ></ion-icon>
+            </ion-button>
+
+            <ion-button slot="end" (click)="goToNextTime()">
+              <ion-icon
+                class="controls"
+                slot="icon-only"
+                name="arrow-dropright"
+              ></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label>
+              <ion-text>
+                <div text-center>
+                  <img class="weather-icon" src="{{ currentIcon }}" alt="" />
+                </div>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-label text-wrap>
+              <ion-text>
+                <h1 text-center class="weather">
+                  {{ currentWeather?.main?.temp | mathRound }}&#8451;
+                </h1>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label text-wrap>
+              <ion-text>
+                <h1 text-center>
+                  {{
+                    currentWeather
+                      ? (currentWeather?.dt_txt.slice(0, 10) | dateFormatter)
+                      : ""
+                  }}
+                </h1>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-label text-wrap>
+              <ion-text>
+                <div text-center>
+                  <ion-button class="refresh" size="large" (click)="getCurrentLocation()">
+                      <ion-icon name="refresh"></ion-icon>
+                    &nbsp;Refresh
+                  </ion-button>
+                </div>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
